# claude-agent-harness

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  agent.py  autonomous_agent_demo.py  client.py  pyproject.toml  requirements.txt  security.py  test_security.py
.claude-plugin/: marketplace.json
agent_harness/: __init__.py  __main__.py  cli.py  client_factory.py  config.py  display.py  info.py  presets.py  prompts.py  runner.py  schema.py  security.py  tracking.py  verify.py
agent_harness/templates/: build.md  config.toml  init.md
docs/: setup-guide.md
examples/claude-ai-clone/: README.md
examples/claude-ai-clone/.agent-harness/: config.toml  spec.md
examples/claude-ai-clone/.agent-harness/prompts/: build.md  coding.md  init.md  initializer.md
examples/simple-calculator/: README.md
examples/simple-calculator/.agent-harness/: config.toml
examples/simple-calculator/.agent-harness/prompts/: build.md  init.md
plugin/.claude-plugin/: plugin.json
plugin/skills/agent-harness/: SKILL.md
tests/: test_cli.py  test_client_factory.py  test_config.py  test_display.py  test_info.py  test_prompts.py  test_runner.py  test_security.py  test_tracking.py  test_verify.py
